# Anima-Public

Anima/AnimaCore/: CMakeLists.txt
Anima/AnimaLibs/: CMakeLists.txt
Anima/AnimaLibs/Diffusion/MCMSimilarity/: CMakeLists.txt
Anima/AnimaLibs/Registration/Transformations/: CMakeLists.txt
Anima/AnimaLibs/Relaxometry/Estimation/: CMakeLists.txt
Anima/AnimaLibs/Relaxometry/Simulation/: CMakeLists.txt
Anima/AnimaLibs/Segmentation/: CMakeLists.txt
Anima/AnimaTools/Diffusion/FibersAnalysis/: CMakeLists.txt
Anima/AnimaTools/Diffusion/FibersAnalysis/FiberPropertyExtractRescale/: CMakeLists.txt
Anima/AnimaTools/Diffusion/FibersAnalysis/FibersDiseaseScores/: CMakeLists.txt
Anima/AnimaTools/Diffusion/FibersAnalysis/Fibers_a_Contrario/: CMakeLists.txt
Anima/AnimaTools/Diffusion/FibersAnalysis/PatientToGroupComparisonOnTracks/: CMakeLists.txt
Anima/AnimaTools/Diffusion/FibersAnalysis/TracksMCM_PropertiesExtraction/: CMakeLists.txt
Anima/AnimaTools/MathsTools/Arithmetic/: CMakeLists.txt
Anima/AnimaTools/MathsTools/Arithmetic/CovarianceImages/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/Combined/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/GMMT2/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/GammaMixtureT2/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/MULTIT2/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/T1/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/T1Se/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/T2/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Estimation/T2EPG/: CMakeLists.txt
Anima/AnimaTools/Relaxometry/Simulation/: CMakeLists.txt
(+32 files in other folders)
