project(AnimaLibs)

# ##############################################################################
# Here go the add_subdirectories, no code should be at the root of the project
# ##############################################################################


add_subdirectory(Diffusion/MCM)
add_subdirectory(Diffusion/MCMBase)
add_subdirectory(Diffusion/Tractography)
add_subdirectory(Registration/Transformations)





