project(ANIMA-QUANTITATIVE-MRI)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################

add_subdirectory(Estimation)
add_subdirectory(Simulation)
