## #############################################################################
## Subdirs exe directories
## #############################################################################

add_subdirectory(FibersDiseaseScores)
add_subdirectory(PatientToGroupComparisonOnTracks)
add_subdirectory(TracksMCM_PropertiesExtraction)
add_subdirectory(Fibers_a_Contrario)
add_subdirectory(FiberPropertyExtractescale)